Fixed mailing list information, updated last release.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@606 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/geotiff.html
+++ b/geotiff/html/geotiff.html
@@ -81,7 +81,7 @@ information, or to get involved.<p>
 <li> <a href="http://www.remotesensing.org/cgi-bin/cvsweb.cgi/osrs/geotiff/">
 libgeotiff CVS Web Access</a><p>
 
-<li> <a href="ftp://ftp.remotesensing.org/pub/geotiff/libgeotiff/libgeotiff-1.2.1.tar.gz">libgeotiff.1.2.1.tar.gz</a> or <a href="ftp://ftp.remotesensing.org/pub/geotiff/libgeotiff/libgeotiff121.zip">libgeotiff121.zip</a>: Released libgeotiff source.<p>
+<li> <a href="ftp://ftp.remotesensing.org/pub/geotiff/libgeotiff/libgeotiff-1.2.2.tar.gz">libgeotiff.1.2.2.tar.gz</a> or <a href="ftp://ftp.remotesensing.org/pub/geotiff/libgeotiff/libgeotiff122.zip">libgeotiff122.zip</a>: Released libgeotiff source.<p>
 
 <li> <a href="ftp://ftp.remotesensing.org/pub/geotiff/libgeotiff/">
 ftp://ftp.remotesensing.org/pub/geotiff/libgeotiff/</a> includes a variety
@@ -111,6 +111,8 @@ viewed</a> via BugZilla. <p>
 
 A mailing list is currently active to discuss the on-going development of this
 standard, and the <a href="api/index.html">libgeotiff</a> support library. 
+Subscribe and unsubscribe 
+<a href="http://www.remotesensing.org/mailman/listinfo/geotiff">on the web</a>.
 Mail can be sent to 
 <a href="mailto:geotiff@remotesensing.org">geotiff@remotesensing.org</a>. 
 Online 
@@ -118,20 +120,6 @@ Online
 archives</a> are available for viewing on the web.<p>
 The GeoTIFF mailing list is also available by NNTP at
 <a href="news://news.gmane.org/gmane.comp.gis.geotiff">news://news.gmane.org/gmane.comp.gis.geotiff</a>.<p>
-
-To subscribe, or unsubscribe send email to 
-<a href="mailto:majordomo@remotesensing.org">majordomo@remotesensing.org</a> 
-with no subject and put one of the following lines in the body of the 
-message:<p>
-
-<pre>
-     subscribe geotiff
-<i>or</i>
-     unsubscribe geotiff
-<i>or</i>
-     help
-</pre>
-
 
 <hr>
 Comments? e-mail <a href="mailto:warmerdam@pobox.com">warmerdam@pobox.com 
