Updated to link to the newer TIFF FAQ.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@618 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/geotiff.html
+++ b/geotiff/html/geotiff.html
@@ -10,7 +10,8 @@
 
 GeoTIFF represents an effort by over 160 different remote sensing,
 GIS, cartographic, and surveying related companies and organizations
-to establish a <a href="http://home.earthlink.net/~ritter/tiff">TIFF</a>
+to establish a 
+<a href="http://www.awaresystems.be/imaging/tiff/faq.html">TIFF</a>
 based interchange format for georeferenced raster imagery.<p>
 
 <!------------------------------------------------------------------------->
