Make index.html into a real html redirect page.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@619 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/index.html
+++ b/geotiff/html/index.html
@@ -1,2 +1,13 @@
+<!doctype html public "-//w3c//dtd html 4.0 transitional//en">
+<html>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+  <meta http-equiv="REFRESH" content="0; URL=geotiff.html">
+  <title>HTML REDIRECT</title>
+</head>
+<body>
 
-Please goto <a href="geotiff.html">geotiff.html</a>.<p>
+<h1>Redirecting to geotiff.html</h1>
+
+</body>
+</html>
