Updated cvs info.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@620 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/geotiff.html
+++ b/geotiff/html/geotiff.html
@@ -6,7 +6,7 @@
 
 <img src="geotiff.gif" height=89 width=400 alt="GeoTIFF"><p>
 
-<i>Last Updated: 15 January, 2003</i><p>
+<i>Last Updated: 8 Sept, 2004</i><p>
 
 GeoTIFF represents an effort by over 160 different remote sensing,
 GIS, cartographic, and surveying related companies and organizations
@@ -77,8 +77,7 @@ information, or to get involved.<p>
 
 <li> <a href="api/globals.html">Libgeotiff API</a>: Partial documentation.<p>
 
-<li> <a href="http://www.remotesensing.org/cgi-bin/cvsweb.cgi/osrs/geotiff/">
-libgeotiff CVS Web Access</a><p>
+<li> libgeotiff CVS repository is :pserver:cvsanon@cvs.maptools.org:/cvs/maptools/cvsroot (password is empty, module is geotiff/libgeotiff). <p>
 
 <li> <a href="ftp://ftp.remotesensing.org/pub/geotiff/libgeotiff/libgeotiff-1.2.2.tar.gz">libgeotiff.1.2.2.tar.gz</a> or <a href="ftp://ftp.remotesensing.org/pub/geotiff/libgeotiff/libgeotiff122.zip">libgeotiff122.zip</a>: Released libgeotiff source.<p>
 
