Updated primary and mirror addresses.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@621 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/geotiff.html
+++ b/geotiff/html/geotiff.html
@@ -25,13 +25,16 @@ This is the <b>official release version</b> of the GeoTIFF spec.<p>
 <li> <a href="http://www.remotesensing.org/geotiff/geotiff.html">http://www.remotesensing.org/geotiff/geotiff.html</a>: Primary GeoTIFF web site (this 
 page).<p>
 
+<li> <a href="http://geotiff.maptools.org/geotiff.html">http://geotiff.maptools.org/geotiff.html</a>: Mirror GeoTIFF web site.<p>
+
 <li> <a href="http://sourceforge.net/projects/geotiff-jai">GeoTIFF-JAI</a>
 and 
 <a href="http://sourceforge.net/projects/xtiff-jai/">Extensible-TIFF-JAI</a>:
 Niles Ritters projects for a Java GeoTIFF API.<p>
 
 <li> <a href="ftp://ftp.remotesensing.org/pub/geotiff/">ftp://ftp.remotesensing.org/pub/geotiff/</a>: Current archive of
-GeoTIFF spec, EPSG/POSC tables, and libgeotiff source code.<p>
+GeoTIFF spec, EPSG/POSC tables, and libgeotiff source code.  Mirrored at 
+<a href="http://geotiff.maptools.org/dl">http://geotiff.maptools.org/dl</a><p>
 
 <li> <a href="ftp://ftp.remotesensing.org/pub/geotiff/samples">ftp://ftp.remotesensing.org/pub/geotiff/samples</a>: Sample GeoTIFF files.<p>
 
