--- a/geotiff/html/proj_list/swiss_oblique_cylindrical.html
+++ b/geotiff/html/proj_list/swiss_oblique_cylindrical.html
@@ -92,6 +92,11 @@ If this is mapped onto Hotine Oblique Mercator, it isn't obvious to me
 what the settings for Azimuth, Angle from rectified grid, and scale at 
 center should be ... likely 90, 90 and 1.0.<p>
 
+Detailed information is available from:<p>
+
+<a href="ftp://ftp.swisstopo.ch/pub/data/geo/refsyse.pdf">
+ftp://ftp.swisstopo.ch/pub/data/geo/refsyse.pdf</a><p>
+
 <h3>EPSG Notes</h3>
 
 Detailed notes on Swiss Oblique Mercator and related projection methods
