--- a/geotiff/html/geotiff.html
+++ b/geotiff/html/geotiff.html
@@ -82,12 +82,9 @@ information, or to get involved.<p>
 
 <li> libgeotiff CVS repository is :pserver:cvsanon@cvs.maptools.org:/cvs/maptools/cvsroot (password is empty, module is geotiff/libgeotiff). <p>
 
-<li> <a href="ftp://ftp.remotesensing.org/pub/geotiff/libgeotiff/libgeotiff-1.2.2.tar.gz">libgeotiff.1.2.2.tar.gz</a> or <a href="ftp://ftp.remotesensing.org/pub/geotiff/libgeotiff/libgeotiff122.zip">libgeotiff122.zip</a>: Released libgeotiff source.<p>
-
-<li> <a href="ftp://ftp.remotesensing.org/pub/geotiff/libgeotiff/">
-ftp://ftp.remotesensing.org/pub/geotiff/libgeotiff/</a> includes a variety
-of other items, including pre-built libraries and listgeo executables for
-various platforms.<P>
+<li> The released libgeotiff source code and various other items are 
+available in the 
+<a href="ftp://ftp.remotesensing.org/pub/geotiff/libgeotiff">ftp.remotesensing.org</a> or <a href="http://geotiff.maptools.org/dl/libgeotiff/">geotiff.maptools.org</a> download directories.<p>
 
 <li> <a href="listgeo.html">listgeo</a> - utility program (distributed with
 libgeotiff) for dumping the metadata of a GeoTIFF file.<p>
