Fixed world file example.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@625 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/faq.html
+++ b/geotiff/html/faq.html
@@ -482,9 +482,9 @@ Ygeo = F + Ypixel * D + Ypixel * B
 So, a typical (north up) arrangement would be:
 <pre>
 pixel width in geounits
-pixel height in geounits
 0
 0
+pixel height in geounits (normally negative)
 top left X geo location
 top left Y geo location
 </pre>
