Fixed link to archives.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@628 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/geotiff.html
+++ b/geotiff/html/geotiff.html
@@ -114,7 +114,7 @@ Subscribe and unsubscribe
 Mail can be sent to 
 <a href="mailto:geotiff@remotesensing.org">geotiff@remotesensing.org</a>. 
 Online 
-<a href="http://www.remotesensing.org/geotiff/mail/maillist.html">threaded 
+<a href="http://www.remotesensing.org/pipermail/geotiff/">threaded 
 archives</a> are available for viewing on the web.<p>
 The GeoTIFF mailing list is also available by NNTP at
 <a href="news://news.gmane.org/gmane.comp.gis.geotiff">news://news.gmane.org/gmane.comp.gis.geotiff</a>.<p>
