Updates to tiff links.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@641 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/faq.html
+++ b/geotiff/html/faq.html
@@ -13,11 +13,10 @@ content="GeoTIFF raster satellite aerial imagery mapping">
 
 <H1>GeoTIFF FAQ Version 2.3</H1>
 
-<h2>Last Updated: November, 2003</h2>
+<h2>Last Updated: January, 2005</h2>
 
 <ADDRESS>
 Author: Mike Ruth<BR>
-Email: <A HREF="mailto:MIKE.RUTH@TELIGENT.COM">Mike.Ruth@teligent.com</A>
 </ADDRESS><p>
 
 <ADDRESS>
@@ -117,9 +116,10 @@ TIFF is a format for storage, transfer, display, and printing
 of raster images, such as clipart, logotypes, scanned documents. 
 Today, TIFF is being used for storage of map information, too.<p>
 
-More information on TIFF can be found at Niles Ritter's 
-<a href="http://home.earthlink.net/~ritter/tiff/">Unofficial TIFF
+More information on TIFF can be found at Joris Van Damme's
+<a href="http://www.awaresystems.be/imaging/tiff.html">TIFF
 Page</a>. <p>
+
 
 <!--------------------------------------------------------------------------->
 <H3><A NAME="What is the purpose of GeoTIFF format for satellite data?">What is the purpose of GeoTIFF format for satellite data?</A></H3>
@@ -591,18 +591,14 @@ enumerated in the various .inc files have not been kept up to date.
 <H3><A NAME="Where can I get a copy of the GeoTIFF spec to review?">Where can I get a copy of the GeoTIFF spec to review?</A></H3>
      
 The most current version of the spec is maintained on the 
-<A HREF="http://home.earthlink.net/~ritter/geotiff/geotiff.html">
-GeoTIFF WWW Homepage</A> <BR>
+<A HREF="http://www.remotesensing.org/geotiff/geotiff.html">
+GeoTIFF WWW Homepage</A>.  The spec it self is at:<p>
+
 <pre>
-  <a href="http://www.remotesensing.org/geotiff/geotiff.html">http://www.remotesensing.org/geotiff/geotiff.html)</a>
-
-  ... or the USGS mirror ...
-
-  <a href="ftp://ftpmcmc.cr.usgs.gov/release/geotiff/jpl_mirror/">ftp://ftpmcmc.cr.usgs.gov/release/geotiff/jpl_mirror/</a>
+  <a href="http://www.remotesensing.org/geotiff/spec/geotiffhome.html">http://www.remotesensing.org/geotiff/spec/geotiffhome.html</a>
 </pre>
- 
-The GeoTIFF WWW site is supported by Dr. Niles Ritter, and Frank
-Warmerdam.  It contains
+
+The GeoTIFF WWW site is supported by Frank Warmerdam.  It contains
 pointers to other GeoTIFF and TIFF resources, including software, sample
 data sets, email archives, compiled utilities, and more. 
 <P></P>
