--- a/geotiff/html/geotiff.html
+++ b/geotiff/html/geotiff.html
@@ -82,6 +82,11 @@ information, or to get involved.<p>
 
 <li> libgeotiff CVS repository is :pserver:cvsanon@cvs.maptools.org:/cvs/maptools/cvsroot (password is empty, module is geotiff/libgeotiff). <p>
 
+<li> The most recent libgeotiff release is version 1.2.2 and is available
+from 
+<a href="ftp://ftp.remotesensing.org/pub/geotiff/libgeotiff/libgeotiff-1.2.2.tar.gz">ftp://ftp.remotesensing.org/pub/geotiff/libgeotiff/libgeotiff-1.2.2.tar.gz</a> 
+or the corresponding <a href="ftp://ftp.remotesensing.org/pub/geotiff/libgeotiff/libgeotiff122.zip">zip</a>.<p>
+
 <li> The released libgeotiff source code and various other items are 
 available in the 
 <a href="ftp://ftp.remotesensing.org/pub/geotiff/libgeotiff">ftp.remotesensing.org</a> or <a href="http://geotiff.maptools.org/dl/libgeotiff/">geotiff.maptools.org</a> download directories.<p>
