--- a/geotiff/html/proj_list/index.html
+++ b/geotiff/html/proj_list/index.html
@@ -16,6 +16,7 @@
 <li> <a href="equirectangular.html">Equirectangular</a>
 <li> <a href="transverse_mercator.html">Gauss-Kruger</a> 
 <li> <a href="gall_stereographic.html">Gall Stereographic</a>
+<li> <a href="geos.html">GEOS - Geostationary Satellite View</a>
 <li> <a href="gnomonic.html">Gnomonic</a>
 <li> <a href="hotine_oblique_mercator.html">Hotine Oblique Mercator</a> 
 <li> <a href="krovak.html">Krovak</a>
