Added suggested spheroid.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@646 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/proj_list/geos.html
+++ b/geotiff/html/proj_list/geos.html
@@ -93,6 +93,9 @@ Note that the satellite height is in meters above the center of earth,
 not over the ellipsoid surface.  The document suggests 42164000m as a 
 reasonable value.<p>
 
+The document also suggests a spheroid with a major axis of 
+6378169.0m and a semi minor axis of 6356583.8m. <p>
+
 <h3>PROJ.4 Organization</h3>
 
 <b>
