Added allocated tag value from Adobe.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@653 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/rpc_prop.html
+++ b/geotiff/html/rpc_prop.html
@@ -78,10 +78,10 @@ precision values.<p>
 
 <pre>
 RPCCoefficientTag:
-       Tag = (yet to be allocated)
+       Tag = 50844
        Type = DOUBLE (IEEE Double precision)
        N = 92
-       Owner: ? 
+       Owner: Frank Warmerdam
 </pre>
 
 The elements of this tag are:<p>
