Fixed typo in worldfile transformation formula.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@654 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/faq.html
+++ b/geotiff/html/faq.html
@@ -476,7 +476,7 @@ The georeferenced location of a pixel center can be computed as:
 
 <pre>
 Xgeo = E + Xpixel * A + Ypixel * C
-Ygeo = F + Ypixel * D + Ypixel * B
+Ygeo = F + Ypixel * D + Xpixel * B
 </pre>
 
 So, a typical (north up) arrangement would be:
