--- a/geotiff/html/proj_list/mercator_1sp.html
+++ b/geotiff/html/proj_list/mercator_1sp.html
@@ -84,20 +84,23 @@
 <h3>Notes</h3>
 
 I believe the formula (EPSG) notes are exactly the same for Mercator (1SP)
-and <a href="mercator_2sp.html">Mercator (2SP)</a>.  There is only one projection in GeoTIFF for straight 
-Mercator.<p>
+and <a href="mercator_2sp.html">Mercator (2SP)</a>.  There is only one projection in GeoTIFF for straight Mercator.<p>
 
 <h3>PROJ.4 Organization</h3>
 
+PROJ.4 does not support a latitude of natural origin other than the equator.   
 <b>
 <pre>
-  +proj=merc  +lat_ts=<i>Latitude of natural origin</i> 
-              +lon_0=<i>Longitude of natural origin</i>
+  +proj=merc  +lon_0=<i>Longitude of natural origin</i>
               +k_0=<i>Scale factor at natural origin</i> 
               +x_0=<i>False Easting</i>
               +y_0=<i>False Northing</i>
 </pre>
 </b>
+
+A more common formulation for Mercator is to drop the +k_0, and instead to
+provide a latitude of true scale using the +lat_ts parameter, which is the 
+latitude at which the scale is 0.<p>
 
 <h3>EPSG Notes</h3>
 
