Added note on ISO.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@665 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/rpc_prop.html
+++ b/geotiff/html/rpc_prop.html
@@ -20,7 +20,9 @@ that document, and the disk layout of the information is defined in
 
 This proposal is being developed in cooperation with the ASPRS
 Softcopy Photogrammetry Committee, and is not yet adopted as part of
-the GeoTIFF specification. <p>
+the GeoTIFF specification.  It is intended to be in line with the
+(still under development) section within ISO 19130 specification
+discussion of RPCs.<p>
 
 <h2>Mathematical Model</h2>
 
