Added height scale limit.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@666 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/rpc_prop.html
+++ b/geotiff/html/rpc_prop.html
@@ -193,7 +193,7 @@ horizontal axis of each point in the image (-1.0 if unknown)
 <tr>
   <td> HEIGHT_SCALE
   </td><td> Geodetic Height Scale
-  </td><td> cannot be 0
+  </td><td> HEIGHT_SCALE > 0 
   </td><td> meters
   </td>
 </tr>
