--- a/geotiff/html/geotiff.html
+++ b/geotiff/html/geotiff.html
@@ -91,6 +91,10 @@ or the corresponding <a href="ftp://ftp.remotesensing.org/pub/geotiff/libgeotiff
 available in the 
 <a href="ftp://ftp.remotesensing.org/pub/geotiff/libgeotiff">ftp.remotesensing.org</a> or <a href="http://geotiff.maptools.org/dl/libgeotiff/">geotiff.maptools.org</a> download directories.<p>
 
+<li> Kevin Chen has contributed a win32 gui for listgeo available
+at <a href="ftp://ftp.remotesensing.org/geotiff/libgeotiff/listgeo_GUI.zip">
+ftp://ftp.remotesensing.org/geotiff/libgeotiff/listgeo_GUI.zip</a>.<p>
+
 <li> <a href="listgeo.html">listgeo</a> - utility program (distributed with
 libgeotiff) for dumping the metadata of a GeoTIFF file.<p>
 
