Reworked text of listgeo gui link.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@671 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/geotiff.html
+++ b/geotiff/html/geotiff.html
@@ -91,7 +91,7 @@ or the corresponding <a href="ftp://ftp.remotesensing.org/pub/geotiff/libgeotiff
 available in the 
 <a href="ftp://ftp.remotesensing.org/pub/geotiff/libgeotiff">ftp.remotesensing.org</a> or <a href="http://geotiff.maptools.org/dl/libgeotiff/">geotiff.maptools.org</a> download directories.<p>
 
-<li> Kevin Chen has contributed a win32 gui for listgeo available
+<li> A contributed win32 gui for listgeo is available
 at <a href="ftp://ftp.remotesensing.org/geotiff/libgeotiff/listgeo_GUI.zip">
 ftp://ftp.remotesensing.org/geotiff/libgeotiff/listgeo_GUI.zip</a>.<p>
 
