alter mailing list location again
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@674 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/geotiff.html
+++ b/geotiff/html/geotiff.html
@@ -119,7 +119,7 @@ viewed</a> via BugZilla. <p>
 A mailing list is currently active to discuss the on-going development of this
 standard, and the <a href="api/index.html">libgeotiff</a> support library. 
 Subscribe and unsubscribe 
-<a href="http://xserve.flids.com/mailman/listinfo/geotiff">on the web</a>.
+<a href="http://remotesensing.org/mailman/listinfo/geotiff">on the web</a>.
 Mail can be sent to 
 <a href="mailto:geotiff@remotesensing.org">geotiff@remotesensing.org</a>. 
 Online 
