Updated mailing list info.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@675 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/geotiff.html
+++ b/geotiff/html/geotiff.html
@@ -119,11 +119,11 @@ viewed</a> via BugZilla. <p>
 A mailing list is currently active to discuss the on-going development of this
 standard, and the <a href="api/index.html">libgeotiff</a> support library. 
 Subscribe and unsubscribe 
-<a href="http://remotesensing.org/mailman/listinfo/geotiff">on the web</a>.
+<a href="http://lists.maptools.org/mailman/listinfo/geotiff">on the web</a>.
 Mail can be sent to 
-<a href="mailto:geotiff@remotesensing.org">geotiff@remotesensing.org</a>. 
+<a href="mailto:geotiff@lists.maptools.org">geotiff@lists.maptools.org</a>. 
 Online 
-<a href="http://www.remotesensing.org/pipermail/geotiff/">threaded 
+<a href="http://lists.maptools.org/pipermail/geotiff/">threaded 
 archives</a> are available for viewing on the web.<p>
 The GeoTIFF mailing list is also available by NNTP at
 <a href="news://news.gmane.org/gmane.comp.gis.geotiff">news://news.gmane.org/gmane.comp.gis.geotiff</a>.<p>
